Removed manual backgrounds entirely, style-backgrounds.css no longer needed Added color shift! added jquery-ui

--- a/css/style.css
+++ b/css/style.css
@@ -510,6 +510,39 @@ label.left-label {
 .coin-setup > .key-import > div {
 	min-height: 50px
 }
+.hue-shift-button
+{
+float: left;
+height: 50px;
+width: 50px !important;
+}
+.coin-wallet-background
+{
+position: absolute;
+top: 0px;
+left: 0px;
+z-index: 1;
+}
+.design-type .coin-wallet-background
+{
+top: 5px;
+border-radius: 10px;
+width: 207px;
+height: 67px;
+margin: auto;
+position: inherit;
+z-index: 0;
+}
+#hue-slider
+{
+margin-left: 20px;
+float: left;
+width: 50%
+}
+.design-type .active > .coin-wallet-background
+{
+border: 5px solid;
+}
 
 #form1{
 	overflow:auto;
@@ -995,14 +1028,28 @@ margin-top: 0px;
 	width: 132px;
 	height: 132px;
 }
-
+.hue-shift-amount
+{
+	position: absolute;
+	top: 300px;
+	left: 279px;
+}
+.hue-shift-reset
+{
+width: 100px !important;
+margin-left: 20px !important;
+}
 .coin-wallet .wallet-frame
-{	
+{
 	width: 100%;
 	height: 100%;
 	padding: 23px;
 	padding-top: 30px;
-	background-repeat: no-repeat;	
+	background-repeat: no-repeat;
+	z-index: 2;
+	position: absolute;
+	top: 0px;
+	left: 0px;
 }
 
 .back .coin-wallet
@@ -1544,8 +1591,6 @@ display: none;
 background-size: 100%;
 }
 .design.selector.active
-{
-border: 5px solid;
 }
 .design.selector.fractal
 {
